[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/art/tileset/tunnel/tileset.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/AV.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Level/TunnelTutorial.gd" type="Script" id=3]
[ext_resource path="res://src/Actors/Canon.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/Actors/CanonFire.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/Actors/CanonCold.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/art/ui/mago1.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://src/Level/TunnelUI.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/audio/sfx/tank.wav" type="AudioStream" id=13]
[ext_resource path="res://src/UserInterface/IngameMenu.tscn" type="PackedScene" id=16]

[sub_resource type="TileSet" id=1]
0/name = "tileset.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 148, 148, 64, 64 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 64, 64 )
0/autotile/spacing = 10
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "tileset.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 4, 4, 208, 208 )
1/tile_mode = 2
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 64, 64 )
1/autotile/spacing = 8
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1069.5, 15.5 )

[sub_resource type="RectangleShape2D" id=67]
extents = Vector2( 10, 114.5 )

[sub_resource type="RectangleShape2D" id=63]
extents = Vector2( 661, 72.5 )

[sub_resource type="Animation" id=69]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TunnelUI:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Level:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TutorialText:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TankSound:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -42.802 ]
}

[sub_resource type="Animation" id=71]
resource_name = "fadeout"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("TunnelUI:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TutorialText:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "finish"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TankSound:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -15.0, -45.223 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BlackScreen/BlackScreen:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("BlackScreen/BlackScreen:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=70]
resource_name = "start"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("TunnelUI:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 4.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TutorialText:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TankSound:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -44.714, -15.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BlackScreen/BlackScreen:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BlackScreen/BlackScreen:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="DynamicFont" id=68]
size = 64
outline_color = Color( 0.960784, 0.913725, 0.74902, 1 )
font_data = ExtResource( 11 )

[node name="TunnelTutorial" type="Node"]
script = ExtResource( 3 )

[node name="Level" type="Node2D" parent="."]

[node name="TileMap_bank" type="TileMap" parent="Level"]
tile_set = SubResource( 1 )
collision_layer = 16
format = 1
tile_data = PoolIntArray( 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 65555, 1, 0, 65556, 1, 0, 65557, 1, 0, 458744, 1, 0, 458745, 1, 0, 458746, 1, 1, 458747, 1, 0, 458748, 1, 0, 458749, 1, 0, 458750, 1, 0, 458751, 1, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 1, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 1, 393229, 1, 0, 393230, 1, 0, 393231, 1, 0, 393232, 1, 0, 393233, 1, 0, 393234, 1, 0, 393235, 1, 0, 393236, 1, 0, 393237, 1, 0, 393238, 1, 0, 393239, 1, 0, 393240, 1, 0, 393241, 1, 0, 393242, 1, 0, 393243, 1, 0, 393244, 1, 0, 393245, 1, 0, 393246, 1, 0, 393247, 1, 0, 393248, 1, 0, 393249, 1, 0, 393250, 1, 0, 393251, 1, 0, 393252, 1, 0, 393253, 1, 0, 393254, 1, 0, 393255, 1, 0, 393256, 1, 0, 393257, 1, 0, 393258, 1, 0, 393259, 1, 0, 393260, 1, 0, 393261, 1, 0, 393262, 1, 0, 393263, 1, 0, 393264, 1, 0, 393265, 1, 0, 393266, 1, 0 )

[node name="AV" parent="Level" instance=ExtResource( 2 )]
position = Vector2( -197, 330 )
scale = Vector2( 0.3, 0.3 )

[node name="ConveyorFloor" type="StaticBody2D" parent="Level"]
collision_mask = 8
constant_linear_velocity = Vector2( 1, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/ConveyorFloor"]
position = Vector2( 781.5, 402.5 )
shape = SubResource( 2 )

[node name="Area2DStop" type="Area2D" parent="Level"]
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Area2DStop"]
position = Vector2( 1835, 266 )
shape = SubResource( 67 )

[node name="Canons" type="Node2D" parent="Level"]

[node name="Canon" parent="Level/Canons" instance=ExtResource( 8 )]
position = Vector2( 608, 113 )

[node name="CanonFire" parent="Level/Canons" instance=ExtResource( 9 )]
position = Vector2( 993, 109 )

[node name="CanonCold" parent="Level/Canons" instance=ExtResource( 10 )]
position = Vector2( 1313, 109 )

[node name="Area2D" type="Area2D" parent="Level"]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Area2D"]
position = Vector2( 384, 452 )
shape = SubResource( 63 )

[node name="UI" type="CanvasLayer" parent="."]
layer = 100
visible = false

[node name="IngameMenu" parent="UI" instance=ExtResource( 16 )]

[node name="BlackScreen" type="CanvasLayer" parent="."]

[node name="BlackScreen" type="ColorRect" parent="BlackScreen"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 2000.0
margin_bottom = 1000.0
color = Color( 0.129412, 0.117647, 0.12549, 1 )

[node name="TunnelUI" parent="." instance=ExtResource( 12 )]
__meta__ = {
"_edit_vertical_guides_": [ 5.0 ]
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "start"
anims/RESET = SubResource( 69 )
anims/fadeout = SubResource( 71 )
anims/start = SubResource( 70 )

[node name="TutorialText" type="CanvasLayer" parent="."]

[node name="RichTextLabel" type="RichTextLabel" parent="TutorialText"]
anchor_left = 0.2
anchor_top = 0.7
anchor_right = 0.2
anchor_bottom = 0.7
margin_right = 1000.0
margin_bottom = 150.0
custom_colors/default_color = Color( 0.960784, 0.913725, 0.74902, 1 )
custom_fonts/normal_font = SubResource( 68 )
text = "Use arrow keys to rotate your shield.
Watch out for your shield's energy!"

[node name="TankSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -42.802
autoplay = true

[connection signal="body_entered" from="Level/Area2DStop" to="." method="_on_Area2DStop_body_entered"]
[connection signal="area_entered" from="Level/Area2D" to="." method="_on_Area2D_area_entered"]
